--- a/demos/style.css
+++ b/demos/style.css
@@ -1,3 +1,21 @@
+.areadocumentos {
+	margin-bottom: 1rem;
+	font-size: 0.9 rem;
+}
+
+.areadaimagem {
+	padding: 1rem 4rem 1rem 4rem;
+}
+
+.botaotaxa {
+	padding: 1em 3em 0 3em;
+}
+
+.avisotaxa {
+	margin-top: 1em !important;
+	text-align: justify;
+}
+
 .detalhamentoConsulta {
 	padding: 1em;
 	color: #8DB6CD;
@@ -70,8 +88,8 @@ th {
 }
 
 #listas {
-	overflow: scroll;
-	height: 16em;
+	overflow: auto;
+	height: 24em;
 }
 
 #descricaolacre {
@@ -89,12 +107,6 @@ th {
 	color: #8DB6CD;
 }
 
-.conteudosolicitacao {
-	padding: 1em;
-	margin-top: 1em;
-	border-style: solid;
-	border-width: 1px;
-}
 
 td {
 	color: white;
@@ -133,7 +145,6 @@ col:nth-child(2n+2) {
 	border-style: solid;
 	border-width: 1px;
 	padding: 1em;
-	;
 }
 
 .cabecalhosecundario {
@@ -141,7 +152,31 @@ col:nth-child(2n+2) {
 	border-style: solid;
 	border-width: 1px;
 	padding: 1em;
+	height: 38rem;
 }
+
+.conteudosolicitacao {
+	padding: 1em;
+	margin-top: 1em;
+	border-style: solid;
+	border-width: 1px;
+	height: 38rem !important;
+	overflow: auto;
+}
+
+#conteudo-decisao{
+	text-align: center;
+}
+
+.confirmacaodepagamento {
+	text-align: center;
+	background: #86cfda;
+	color: white;
+	font-size: 0.75em;
+	padding: 2em; 
+	margin-top: 2em;
+}
+
 
 /* .btn-info {
 	border: solid 3px #0bb975;
